# SpaceInvaders2D

./: README.md
Graphics Ass1/: CMakeLists.txt  auto.bat
Graphics Ass1/ProjectSettings/: ProjectSettings.asset
Graphics Ass1/src/: MainWorld.cpp  MainWorld.h  PersistantData.cpp  PersistantData.h  Sprite.cpp  Sprite.h  gameSetUp.cpp  gameSetUp.h  main.cpp
